care-australia-uat/force-app/main/default/objects/PaypalInformation__mdt/PaypalInformation__mdt.object-meta.xml
<CustomObject>
    <description>Contains static keys and Values</description>
    <label>PaypalInformation</label>
    <pluralLabel>PaypalInformations</pluralLabel>
</CustomObject>