care-australia-uat/force-app/main/default/objects/PaypalInformation__mdt/fields/ClientSecret__c.field-meta.xml
<CustomField>
    <fullName>ClientSecret__c</fullName>
    <label>ClientSecret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>