care-australia-uat/force-app/main/default/objects/PaypalInformation__mdt/fields/ConfirmOrderUrl__c.field-meta.xml
<CustomField>
    <fullName>ConfirmOrderUrl__c</fullName>
    <description>Used for conforming the payment status</description>
    <label>ConfirmOrderUrl</label>
    <type>Url</type>
</CustomField>