care-australia-uat/force-app/main/default/objects/PaypalInformation__mdt/fields/EndpointUrl__c.field-meta.xml
<CustomField>
    <fullName>EndpointUrl__c</fullName>
    <label>EndpointUrl</label>
    <type>Url</type>
</CustomField>