care-australia-uat/force-app/main/default/objects/PaypalInformation__mdt/fields/OrderExtra__c.field-meta.xml
<CustomField>
    <fullName>OrderExtra__c</fullName>
    <label>OrderExtra</label>
    <length>50</length>
    <type>Text</type>
</CustomField>