care-australia-uat/force-app/main/default/objects/PaypalInformation__mdt/fields/PaymentEndpoint__c.field-meta.xml
<CustomField>
    <fullName>PaymentEndpoint__c</fullName>
    <description>used for getting payment link from paypal</description>
    <label>PaymentEndpoint</label>
    <type>Url</type>
</CustomField>